@@ -52,7 +52,7 @@ AUX glib-2.30.2-missing-decls.patch 940 RMD160 51326d265cac3014b38eecb42f2f9df8a
 AUX glib-2.31.x-external-gdbus-codegen.patch 3504 RMD160 6e12014b5549beec7a5d5f6504a5f657699bb9e4 SHA1 6625bbb01a5b39970a28f78503bcc58e13cd5297 SHA256 47a0f2f2a99a50042063952994c8538097dee14ea5b2ca39f1c168092c645c6e
 AUX glib-2.32.1-fix-libelf-check.patch 245 RMD160 34090a40ab07d65fbe2422542d846d872a2ce91b SHA1 c7e9184c9e1318843d5769d1d58f3034ee104552 SHA256 9d93a16fad7cc0f6c3a47a6302d057f7f0b181e2551f3bdd3b647377da5f7f35
 AUX glib-2.32.1-gnustep-not-cocoa.patch 780 RMD160 6b7dc4c5d5da3dff970bb488ebe5812a928b8c38 SHA1 cccbdf338df0752f81bdd940ece4181df44dc8e1 SHA256 deaf68cd1743d23c63d7e03d6232d5d3198516b2a8cb53707da67a2dcde1922a
-AUX glib-2.32.1-solaris-thread.patch 786 RMD160 82238b9445f450a55b8ce53018926e083b057a75 SHA1 e6a6a7114be843c9f456d3345e260448918ad1e9 SHA256 2e34f21df3562260de5c2becf4fd0a62c71f4a807495e2b02b8ed35d69c7dc24
+AUX glib-2.32.1-solaris-thread.patch 1379 RMD160 0877eeab3658c051032040e5fc6e32c3623566ac SHA1 585d0eb0120ad35cd982f0b32c04d32f663a49a9 SHA256 6702b4b2ea7c40115bed70245748f56ed248c177c1a7aeae0faf5c68f9440df0
 AUX glib-2.6.3-testglib-ssp.patch 344 RMD160 6709acf85c52e39553e2e5ee93637f7e9cc7eca6 SHA1 403b249a460a9700669e754a562fb6974f3d6898 SHA256 c2ece3d7b4533e3bfbe8100df5d0824176d9dfa0b18697a8919162956c8ebfa8
 DIST glib-1.2.10-r1-as-needed.patch.bz2 9099 RMD160 5b7a21da6dc10112409bd885501a6976a2eb894d SHA1 468a7947b7d1688c2e7d61da80d40ca59422fbec SHA256 3bb8c45706f97b526da851061c89618bc258fa61f9100802c1340548e4bb2731
 DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 SHA1 e5a9361c594608d152d5d9650154c2e3260b87fa SHA256 6e1ce7eedae713b11db82f11434d455d8a1379f783a79812cd2e05fc024a8d9f
@@ -65,12 +65,12 @@ EBUILD glib-2.30.1-r2.ebuild 10280 RMD160 e38342120dc91e2680c1ca2c864984a2f07fe7
 EBUILD glib-2.30.2-r1.ebuild 10631 RMD160 282024ad0be038d05b9f716ba40221e6a2fea281 SHA1 34044cf15b9d0b39137126d1474e7c721e33982f SHA256 015d1f1ee332f685e3ed765cdd0fb01fd776e177eece0f7449ff4809fc014771
 EBUILD glib-2.30.2.ebuild 10525 RMD160 e61875e97fa767319e9c41dbe9d3448a1ae536ae SHA1 53384b40a49e3ac7b568c28351fc78bcfa9015d7 SHA256 29f8d31fd4959bec5eecdb9cb468ce640b23754ffe2219c7b8bd7645bd67b03d
 EBUILD glib-2.32.1.ebuild 10255 RMD160 a5756d011d6bd2f47f1b9a2b2f27eef7e4a2011f SHA1 396b2fab814fc11fafdee0c8cf6a2cd4c14e7b06 SHA256 758eeb84238e6d6f286f141e7d8160c0e54bccc6f646e92169ef1e1f695445e8
-MISC ChangeLog 69934 RMD160 fb788809a0d24148cd460687c7256a1609122e8e SHA1 5487d92edef8daf6e3f9c7bdacf6b4ea62e94d0a SHA256 241884be4bfd7e71b3cf6784b7b58c77bc44b71dd655e76dbe985383a16f5ed1
+MISC ChangeLog 70062 RMD160 1e4ce8a40b28fbf059de1215f9b7b5aaf774363d SHA1 8a0bf4f118f6e45d0ed91c1d4e638dd80228c4d8 SHA256 edf5809bb6de5a3197f1cd01b69c1686091bbaa5f858415b4438c638cf762bcd
 MISC metadata.xml 497 RMD160 447ae0d07ac529dbe1830e383d2ef4eae7359ea7 SHA1 4cb36fafa32d53a0dbeec978b0d75f4e7acb3fa0 SHA256 a1840f7e6af57edc9fe5b54deae9e2083858d27792fda3f4e1e8e04624b17d0d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk+TuZwACgkQX3X2B8XHTokN4wCgk5iA1q4BV7ucdF4jJQWgVyCl
-ThoAn1WlUpHcvmWyDpP9yzPi6OdBQPBo
-=LxDn
+iEYEARECAAYFAk+T0MMACgkQX3X2B8XHTolOZACeJgzXF36wpOa6VRhF91Xfo2w5
++7gAn0969zOEvKbbotBw89L5Va1+1ZQH
+=1IWu
 -----END PGP SIGNATURE-----
